Initial release of modlem
This is the first fully-put-together version of modlem. The code is still a
mess, but it does successfully edit the graphics for Lemmings (and Christmas
Lemmings).

Most of this was written on-and-off in 2022–2024, with a few tweaks for release
over the 2025–2026 southern-hemisphere summer (such as the writing of the readme).

Do give it a try: it ought to be fun. But don't judge it too harshly!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,21 @@
 [package]
 name = "modlem"
-version = "0.1.0"
+authors = ["David Gow <david@davidgow.net>"]
+version = "0.4.0"
 edition = "2015"
+homepage = "https://davidgow.net/hacks/modlem.html"
+license = "LGPL-3.0-or-later"
+autobins = false # We don't want confusion with 'main' and the 'main.dat' file
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "modlem"
+path = "src/modlem.rs"
+
+[lints.rust]
+dead_code = "allow"
+
+[build]
 
 [dependencies]
